experimental/parser/testdata/parser/field/incomplete.proto.stderr.txt
error: unexpected identifier after definition
  --> testdata/parser/field/incomplete.proto:24:5
   |
24 |     foo.Bar name;
   |     ^^^ expected `;`
  help: consider inserting a `;`
   |
24 |     ;foo.Bar name;
   |     +

error: unexpected integer literal in definition
  --> testdata/parser/field/incomplete.proto:25:18
   |
25 |     foo.Bar name 1;
   |                  ^ expected `=`
  help: consider inserting a `=`
   |
25 |     foo.Bar name =1;
   |                  +

error: unexpected identifier after definition
  --> testdata/parser/field/incomplete.proto:28:5
   |
28 |     foo..bar name = 1;
   |     ^^^ expected `;`
  help: consider inserting a `;`
   |
28 |     ;foo..bar name = 1;
   |     +

error: unexpected tokens after `.`
  --> testdata/parser/field/incomplete.proto:28:9
   |
28 |     foo..bar name = 1;
   |         ^ expected identifier or `(...)`

error: unexpected tokens after `.`
  --> testdata/parser/field/incomplete.proto:29:9
   |
29 |     foo...bar name = 1;
   |         ^^ expected identifier or `(...)`

error: unexpected `=` after qualified name
  --> testdata/parser/field/incomplete.proto:30:19
   |
30 |     foo.bar name. = 1;
   |                   ^ expected identifier or `(...)`
  help: delete the extra `.`
   |
30 | -     foo.bar name. = 1;
30 | +     foo.bar name = 1;
   |

encountered 6 errors
